@@ -1,5 +1,5 @@
 name="lacaml"
-version="4.6.0"
+version="4.6.1"
 description="LACAML - BLAS/LAPACK-interface for OCaml"
 
 requires="lacaml.core"
